--- a/spurt.yml
+++ b/spurt.yml
@@ -8,31 +8,33 @@
         update_cache: yes
 
     - name: Running nodejs shellscript
-      ansible.builtin.command: curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+      shell: curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
       become: yes
       args:
         chdir: /home/bharadwaj/
 
     - name: Installing nodejs
       ansible.builtin.apt:
-      pkg:
-        - nodejs
+        name: nodejs
 
     - name: Installing essential packages
       ansible.builtin.apt:
-      pkg:
-        - build-essential
+        name: build-essential
 
-    - name: Installing additional dependencies
-      community.general.npm:
-        name: forever -g
-        path: /home/bharadwaj/
+    - name: Running nodejs shellscript
+      command: npm install forever -g
+      become: yes
+      args:
+        chdir: /home/bharadwaj/
 
-    - name: Installing additional dependencies
-      community.general.npm:
-        name: apidoc -g
-        path: /home/bharadwaj/
+    - name: Running nodejs shellscript
+      command: npm install apidoc -g
+      become: yes
+      args:
+        chdir: /home/bharadwaj/
 
+
+    
     
 
     
